# dfu-service/src/main/java/cn/gatesma/desirefu/controller/api/generate/MessageApiController.java
@@ -1,0 +1,67 @@
+package cn.gatesma.desirefu.controller.api.generate;
+
+import cn.gatesma.desirefu.constants.ApiReturnCode;
+import cn.gatesma.desirefu.controller.api.CustomerApiException;
+import cn.gatesma.desirefu.domain.api.generate.*;
+import cn.gatesma.desirefu.service.MessageService;
+import cn.gatesma.desirefu.service.NotificationService;
+import com.fasterxml.jackson.databind.ObjectMapper;
+import io.swagger.annotations.*;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
+import org.springframework.stereotype.Controller;
+import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestHeader;
+import org.springframework.web.bind.annotation.RequestParam;
+import org.springframework.web.bind.annotation.RequestPart;
+import org.springframework.web.multipart.MultipartFile;
+
+import javax.annotation.Resource;
+import javax.validation.constraints.*;
+import javax.validation.Valid;
+import javax.servlet.http.HttpServletRequest;
+import java.io.IOException;
+import java.util.List;
+import java.util.Map;
+@Controller
+public class MessageApiController implements MessageApi {
+
+    private static final Logger log = LoggerFactory.getLogger(MessageApiController.class);
+
+    private final ObjectMapper objectMapper;
+
+    private final HttpServletRequest request;
+
+    @Resource
+    private MessageService messageService;
+
+    @org.springframework.beans.factory.annotation.Autowired
+    public MessageApiController(ObjectMapper objectMapper, HttpServletRequest request) {
+        this.objectMapper = objectMapper;
+        this.request = request;
+    }
+
+    public ResponseEntity<SelectMessageRet> selectMessage(@ApiParam(value = "" ,required=true )  @Valid @RequestBody SelectMessageRequest body) {
+        String accept = request.getHeader("Accept");
+        if (accept != null && accept.contains("application/json")) {
+            SelectMessageRet response = messageService.selectMessage(body);
+            return new ResponseEntity<>(response, HttpStatus.OK);
+        } else {
+            throw new CustomerApiException(ApiReturnCode.HEADER_ACCEPT_MISSING, "Accept 'application/json' was expected");
+        }
+    }
+
+    public ResponseEntity<UpdateMessageStatusRet> updateMessageStatus(@ApiParam(value = "" ,required=true )  @Valid @RequestBody UpdateMessageStatusRequest body) {
+        String accept = request.getHeader("Accept");
+        if (accept != null && accept.contains("application/json")) {
+            UpdateMessageStatusRet response = messageService.updateStatus(body);
+            return new ResponseEntity<>(response, HttpStatus.OK);
+        } else {
+            throw new CustomerApiException(ApiReturnCode.HEADER_ACCEPT_MISSING, "Accept 'application/json' was expected");
+        }
+    }
+
+}
