# dfu-service/src/main/java/cn/gatesma/desirefu/domain/api/generate/UpdateMessageStatusRet.java
@@ -1,0 +1,53 @@
+package cn.gatesma.desirefu.domain.api.generate;
+
+import java.util.Objects;
+import cn.gatesma.desirefu.domain.api.generate.ReturnCode;
+import java.io.Serializable;
+import org.springframework.validation.annotation.Validated;
+import javax.validation.Valid;
+import javax.validation.constraints.*;
+
+/**
+ * UpdateMessageStatusRet
+ */
+@Validated
+public class UpdateMessageStatusRet extends ReturnCode implements Serializable {
+  private static final long serialVersionUID = 1L;
+
+
+  @Override
+  public boolean equals(java.lang.Object o) {
+    if (this == o) {
+      return true;
+    }
+    if (o == null || getClass() != o.getClass()) {
+      return false;
+    }
+    return true;
+  }
+
+  @Override
+  public int hashCode() {
+    return Objects.hash(super.hashCode());
+  }
+
+  @Override
+  public String toString() {
+    StringBuilder sb = new StringBuilder();
+    sb.append("class UpdateMessageStatusRet {\n");
+    sb.append("    ").append(toIndentedString(super.toString())).append("\n");
+    sb.append("}");
+    return sb.toString();
+  }
+
+  /**
+   * Convert the given object to string with each line indented by 4 spaces
+   * (except the first line).
+   */
+  private String toIndentedString(java.lang.Object o) {
+    if (o == null) {
+      return "null";
+    }
+    return o.toString().replace("\n", "\n    ");
+  }
+}
