# dfu-service/src/main/resources/swagger.yaml
@@ -39,6 +39,8 @@ tags:
     description: 公告
   - name: Organize
     description: 队伍
+  - name: Message
+    description: 消息
 
 schemes:
   - http
@@ -761,6 +763,60 @@ paths:
         404:
           description: RequestBody not found
 
+  /message/select:
+    post:
+      tags:
+        - Message
+      summary: 获取信息
+      description: 获取信息
+      operationId: selectMessage
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      parameters:
+        - in: body
+          name: body
+          required: true
+          schema:
+            $ref: '#/definitions/SelectMessageRequest'
+      responses:
+        200:
+          description: OK
+          schema:
+            $ref: '#/definitions/SelectMessageRet'
+        400:
+          description: Invalid RequestBody supplied
+        404:
+          description: RequestBody not found
+
+  /message/update_status:
+    post:
+      tags:
+        - Message
+      summary: 更新状态
+      description: 更新状态
+      operationId: updateMessageStatus
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      parameters:
+        - in: body
+          name: body
+          required: true
+          schema:
+            $ref: '#/definitions/UpdateMessageStatusRequest'
+      responses:
+        200:
+          description: OK
+          schema:
+            $ref: '#/definitions/UpdateMessageStatusRet'
+        400:
+          description: Invalid RequestBody supplied
+        404:
+          description: RequestBody not found
+
 definitions:
   Object:
     type: object
@@ -809,6 +865,99 @@ definitions:
         type: integer
         format: int32
         description: 总共数据量
+
+  UpdateMessageStatusRequest:
+    title: UpdateMessageStatusRequest
+    properties:
+      ids:
+        type: array
+        example:
+          - 177953
+          - 177954
+          - 177955
+        items:
+          type: integer
+          format: int64
+      status:
+        type: integer
+        format: int32
+        example: 100000
+        description: 更新后的状态
+      userId:
+        type: integer
+        format: int64
+        example: 3453454
+        description: 操作者
+
+  UpdateMessageStatusRet:
+    allOf:
+      - $ref: '#/definitions/ReturnCode'
+
+
+  SelectMessageRequest:
+    properties:
+      page:
+        $ref: '#/definitions/Page'
+      accountId:
+        type: integer
+        format: int64
+        example: 100000
+        description: 账号ID
+      type:
+        type: integer
+        format: int32
+        example: 1
+        description: 类型
+      status:
+        type: integer
+        format: int32
+        example: 1
+        description: 状态
+
+  SelectMessageRet:
+    allOf:
+      - $ref: '#/definitions/ReturnCode'
+      - properties:
+          data:
+            type: array
+            items:
+              $ref: '#/definitions/SelectMessageData'
+
+  SelectMessageData:
+    properties:
+      id:
+        type: integer
+        format: int64
+        example: 100000
+        description: id
+      accountId:
+        type: integer
+        format: int64
+        example: 100000
+        description: 账号ID
+      type:
+        type: integer
+        format: int32
+        example: 1
+        description: 类型
+      title:
+        type: string
+        example: 1
+        description: 标题
+      content:
+        type: string
+        example: 1
+        description: 内容
+      status:
+        type: integer
+        format: int32
+        example: 1
+        description: 状态
+      createdTime:
+        type: string
+        example: '2020-01-01 12:00:00'
+        description: 创建时间，格式：yyyy-MM-dd HH:mm:ss
+
 
   UpdateOrganizeApplicationRequest:
     title: UpdateOrganizeApplicationRequest
